add active state to current div

--- a/index.html
+++ b/index.html
@@ -56,33 +56,43 @@
     $( document ).ready(function() {
       $( "#logo" ).click(function( event ) {
         event.preventDefault();
+        $('#main_nav li a').removeClass('active');
         $('.page_element').hide();
         $('#page_home').show();
       });
 
       $( "#about" ).click(function( event ) {
         event.preventDefault();
+        $('#main_nav li a').removeClass('active');
+        $(this).addClass('active');
         $('.page_element').hide();
         $('#page_about').show();
       });
 
       $( "#music" ).click(function( event ) {
         event.preventDefault();
+        $('#main_nav li a').removeClass('active');
+        $(this).addClass('active');
         $('.page_element').hide();
         $('#page_soundcloud').show();
       });
 
       $( "#media" ).click(function( event ) {
         event.preventDefault();
+        $('#main_nav li a').removeClass('active');
+        $(this).addClass('active');
         $('.page_element').hide();
         $('#page_media').show();
       });
 
       $( "#contact" ).click(function( event ) {
         event.preventDefault();
+        $('#main_nav li a').removeClass('active');
+        $(this).addClass('active');
         $('.page_element').hide();
         $('#page_contact').show();
       });
+
     });
     </script>
 
