--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 
     <div id="page_about" class="page_element">
       <h2>What Yohannes is all about</h2>
-      <p>Bacon ipsum dolor sit amet beef short ribs chicken, salami corned beef biltong fatback filet mignon spare ribs frankfurter turducken pastrami. Rump short loin boudin kevin porchetta bacon short ribs ribeye landjaeger sirloin. Filet mignon biltong chuck, short ribs strip steak pork belly flank turkey tri-tip corned beef sirloin short loin cow tongue. Drumstick kevin corned beef hamburger salami pork loin beef ribs jerky pork belly short ribs capicola flank ball tip rump cow. Tongue tail ground round short ribs chuck. Flank landjaeger ball tip, ground round tongue bacon pork chop filet mignon sirloin. Frankfurter pork loin kevin bresaola tail, fatback landjaeger short ribs pancetta chuck.</p>
-
-      <p>Beef ribs pig strip steak doner flank. Ball tip landjaeger filet mignon kielbasa capicola shankle jowl chicken pastrami tail hamburger. Capicola kevin ham tri-tip boudin tail flank beef drumstick venison hamburger. Porchetta boudin meatball, landjaeger turducken kevin ham. Drumstick andouille ham ham hock ribeye ball tip, jerky kielbasa pork landjaeger fatback shank pork belly.</p>
-
-      <p>Bresaola pork chop porchetta, kevin rump tail prosciutto ball tip pancetta salami. Strip steak shoulder tongue pancetta doner kielbasa jowl meatloaf. Hamburger fatback short ribs pork loin boudin, bresaola sirloin pastrami leberkas salami. Bresaola ball tip shank pork loin shankle tenderloin leberkas kevin spare ribs drumstick corned beef tongue.</p>
+      <p>Born in Boston in 2014, Yohannes is a group of college undergrads who decided not to major in music. Band members Alex, Eli, Keenan, and Zach spend their days studying Engineering, Computer Science, and Social Entrepreneurship, and their nights playing music.</p>
+      <p>The members of Yohannes all study at Northeastern University, and frequently reminisce on the good fortune of their seemingly random meeting and forming of a band during their Freshman year. Keenan and Alex met each other as Freshman year roommates through their correspondence on an online group for incoming Northeastern Freshman, which solely consisted of the queries “Who here likes to play music?” and “I do, want to be roommates?” After a few late nights having furious fun mocking their most despised classic rock songs, Alex and Keenan, who both play guitar and sing, decided to turn back to their trusty friend, the internet, to find a bassist (Eli) and drummer (Zach) and start writing original songs.</p>
+      <p>First dubbing themselves “Royal Manatee,” the group used loopholes in the school’s music department policies to acquire practice room time, trekking through the snow with a heaving bin of equipment after a long day of studying, just to play with one of the few drum kits on campus. It was about having fun, about blowing off steam after class, about turning emotional troubles into lyrics. As the band played together more and more, however, they developed a sense of comradery and a vision to do much, much more.</p>
+      <p>Renaming themselves to “Royale,” a spin-off of their old aquatic moniker, the band became more serious. They spent the next year growing sonically and technically before moving in together on Mission Hill in their third year… or at least mostly moving in together, with Zach commuting in to stay over on one of the guest hammocks (the band’s guest bed solution in their compact living space). The band created out of their apartment’s living room a home recording studio, and with all of their instruments now in one room, they got a handle on picking up one another’s gear and playing it as their own. Without a T.V. or even a couch, the band members learned new instruments nightly; the multi-instrumentalism-renaissance was pushed to further extremes with the frequent acquisition of new instruments such as banjo, cajon, and even didgeridoo. </p>
+      <p>After evolving rapidly, and catapulting into the end of their college careers, the band was forced to look toward the future. An entirely new, multi-instrumental animal, the band decided to change its name, a final time, to “Yohannes”. They released their self-titled debut EP on October 14th, 2014, which comprised of a collection of songs from the Royale-era, and are currently writing a full-length original album under their new persona. Yohannes now plays live around Boston, and is in the works of planning a national tour in 2016 after they graduate.</p>
     </div>
 
     <div id="page_media" class="page_element"><img src="css/images/cover.png"></div>
 
     <div id="page_contact" class="page_element">
       <h2>Drop us a line!</h2>
-      <a href="mailto:royaletheband@gmail.com" target="none">royaletheband@gmail.com</a>
+      <a href="mailto:royaletheband@gmail.com" target="none">yohannesband@gmail.com</a>
 
     </div>
 
