--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       <p>After evolving rapidly, and catapulting into the end of their college careers, the band was forced to look toward the future. An entirely new, multi-instrumental animal, the band decided to change its name, a final time, to “Yohannes”. They released their self-titled debut EP on October 14th, 2014, which comprised of a collection of songs from the Royale-era, and are currently writing a full-length original album under their new persona. Yohannes now plays live around Boston, and is in the works of planning a national tour in 2016 after they graduate.</p>
     </div>
 
-    <div id="page_media" class="page_element"><img src="css/images/cover.png"></div>
+    <div id="page_media" class="page_element">
+      <div class="media_image"><img src="css/images/y2.jpg"></div>
+      <div class="media_image"><img src="css/images/y1.jpg"></div>
+      <div class="media_image"><img src="css/images/cover.png"></div>
+    </div>
 
     <div id="page_contact" class="page_element">
       <h2>Drop us a line!</h2>
