change contct copy

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div id="page_contact" class="page_element">
-      <h2>Drop us a line!</h2>
+      <h2>Booking/Inquiries</h2>
       <a href="mailto:royaletheband@gmail.com" target="none">yohannesband@gmail.com</a>
 
     </div>
