changed facebook link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a target="_blank" href="https://soundcloud.com/royaletheband"><div id="soundcloud"></div></a></li>
           <li><a target="_blank" href="http://instagram.com/royaletheband"><div id="instagram"></div></a></li>
           <li><a target="_blank" href="https://twitter.com/Royaletheband"><div id="twitter"></div></a></li>
-          <li><a target="_blank" href="https://www.facebook.com/royaletheband"><div id="facebook"></div></a></li>
+          <li><a target="_blank" href="https://www.facebook.com/whoisyohannes"><div id="facebook"></div></a></li>
         </ul>
 
         <ul class="nav" id="main_nav">
