--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="header">
         <ul class="nav" id="social_nav">
           <li><a target="_blank" href="https://play.spotify.com/album/1mSwVr4DwRnVqpUBUFzvg3"><div id="spotify"></div></a></li>
-          <li><a target="_blank" href="https://soundcloud.com/royaletheband"><div id="soundcloud"></div></a></li>
-          <li><a target="_blank" href="http://instagram.com/royaletheband"><div id="instagram"></div></a></li>
-          <li><a target="_blank" href="https://twitter.com/Royaletheband"><div id="twitter"></div></a></li>
+          <li><a target="_blank" href="https://soundcloud.com/whoisyohannes"><div id="soundcloud"></div></a></li>
+          <li><a target="_blank" href="http://instagram.com/whoisyohannes"><div id="instagram"></div></a></li>
+          <li><a target="_blank" href="https://twitter.com/whoisyohannes"><div id="twitter"></div></a></li>
           <li><a target="_blank" href="https://www.facebook.com/whoisyohannes"><div id="facebook"></div></a></li>
         </ul>
 
