--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Yohannes</title>
+    <meta name="description" content="Yohannes is a smattering of genres with a sense of humor and a desire to change the world for the better">
+    <meta name="keywords" content="Yohannes,Band,Boston,Music">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="css/images/favicon.ico" >
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -18,6 +20,7 @@
   </script>
   </head>
   <body>
+    <h1 style="display:none;">Yohannes</h1>
     <div class="header_wrap">
       <div class="header">
         <ul class="nav" id="social_nav">
