change title to include who is yohannes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Yohannes</title>
+    <title>Yohannes - Who is Yohannes?</title>
     <meta name="description" content="Yohannes is a smattering of genres with a sense of humor and a desire to change the world for the better">
-    <meta name="keywords" content="Yohannes,Band,Boston,Music">
+    <meta name="keywords" content="Yohannes,Band,Boston,Music,Who is Yohannes">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="css/images/favicon.ico" >
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
