--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Yohannes - Who is Yohannes?</title>
     <meta name="description" content="Yohannes is a smattering of genres with a sense of humor and a desire to change the world for the better">
     <meta name="keywords" content="Yohannes,Band,Boston,Music,Who is Yohannes">
+    <meta name="google-site-verification" content="ie36lGo7kefAZpg3Ki21owIxs7eiTeiFSHCkWOX2Dqg" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.css">
     <link rel="shortcut icon" href="css/images/favicon.ico" >
