--- a/index.html
+++ b/index.html
@@ -3,143 +3,94 @@
   <head>
     <meta charset="utf-8">
     <title>Yohannes - Who is Yohannes?</title>
-    <meta name="description" content="Yohannes is a smattering of genres with a sense of humor and a desire to change the world for the better">
+    <meta name="description" content="Yohannes is a smattering of genres with a sense of humor and a desire to change the world for the better.">
     <meta name="keywords" content="Yohannes,Band,Boston,Music,Who is Yohannes">
     <meta name="google-site-verification" content="ie36lGo7kefAZpg3Ki21owIxs7eiTeiFSHCkWOX2Dqg" />
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.css">
     <link rel="shortcut icon" href="css/images/favicon.ico" >
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="plugins/fancybox/jquery.fancybox.pack.js"></script>
 
     <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  
-    ga('create', 'UA-55954729-1', 'auto');
-    ga('send', 'pageview');
-  </script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-55954729-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
-    <h1 style="display:none;">Yohannes</h1>
-    <div class="header_wrap">
-      <div class="header">
-        <div class="nav_wrap">
-          <ul class="nav" id="social_nav">
+
+    <div class="header">
+      <div class="logo">
+        <a href="#"><img src="css/images/logo_futura.png"></a>
+      </div>
+      <ul class="navigation">
+        <li class="navigation_item"><a href="#who_is_yohannes">Who is Yohannes?</a></li>
+        <li class="navigation_item"><a href="#music">Music</a></li>
+        <li class="navigation_item"><a href="#photos">Photo</a></li>
+        <li class="navigation_item"><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+    <div class="page_body">
+      <div class="top_section">
+      </div>
+      <div class="content_wrap grey_block">
+        <span class="anchor_offset" id="who_is_yohannes"></span>
+        <div class="content_block">
+          <h2>Who is Yohannes?</h2>
+
+          <div class="video_wrap partial_width_video"><iframe src="https://www.youtube.com/embed/pQ8AXcbmIVA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+
+          <div class="video_wrap partial_width_video"><iframe src="https://www.youtube.com/embed/zXXjjSR0e10?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+
+          <div class="video_wrap partial_width_video"><iframe src="https://www.youtube.com/embed/9dppnKpyJFc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+
+          <div class="video_wrap full_width_video"><iframe src="https://www.youtube.com/embed/SDNLorFH3D0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+        </div>
+      </div>
+      <div class="content_wrap white_block">
+        <span class="anchor_offset" id="music"></span>
+        <div class="content_block">
+          <h2>How about some tunes?</h2>
+
+          <iframe style="margin-bottom:15px;" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/124980926&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+          <iframe style="margin-bottom:15px;" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155225291&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+          <iframe style="margin-bottom:15px;" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/124980833&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+        </div>
+      </div>
+
+      <div class="content_wrap grey_block">
+        <span class="anchor_offset" id="photos"></span>
+        <div class="content_block">
+          <h2>And some pics?</h2>
+
+          <script src="http://snapwidget.com/js/snapwidget.js"></script>
+          <iframe src="http://snapwidget.com/in/?u=d2hvaXN5b2hhbm5lc3xpbnwxMjV8M3wzfHxub3wxNXxub25lfG9uU3RhcnR8eWVzfHllcw==&ve=140515" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
+        </div>
+      </div>
+
+      <div class="content_wrap red_block">
+        <span class="anchor_offset" id="contact"></span>
+        <div class="content_block">
+          <a id="contact_mail" href="mailto:royaletheband@gmail.com" target="none">yohannesband@gmail.com</a>
+          <ul class="social_icons">
             <li><a target="_blank" href="https://play.spotify.com/album/1mSwVr4DwRnVqpUBUFzvg3"><div id="spotify"></div></a></li>
             <li><a target="_blank" href="https://soundcloud.com/whoisyohannes"><div id="soundcloud"></div></a></li>
             <li><a target="_blank" href="http://instagram.com/whoisyohannes"><div id="instagram"></div></a></li>
             <li><a target="_blank" href="https://twitter.com/whoisyohannes"><div id="twitter"></div></a></li>
             <li><a target="_blank" href="https://www.facebook.com/whoisyohannes"><div id="facebook"></div></a></li>
           </ul>
-
-          <ul class="nav" id="main_nav">
-            <li><a href="#" id="about">about</a></li>
-            <li><a href="#" id="music">music</a></li>
-            <li><a href="#" id="media">media</a></li>
-            <li><a href="#" id="contact">contact</a></li>
-          </ul>
         </div>
-
-        <a href="#" id="logo"><img src="css/images/logo.png"></a>
-
-    	</div>
-    </div>
-    <div class="page_body">
-      <div id="page_home" class="page_element">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/124980926&amp;color=4fc3f7&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-
-        <iframe style="margin-top:50px;" width="930" height="525" src="https://www.youtube.com/embed/SDNLorFH3D0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
-
-      <div id="page_soundcloud" class="page_element"><iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/12590223&amp;color=4fc3f7&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></iframe>
     </div>
-
-    <div id="page_about" class="page_element">
-      <div class="about_text">
-        <h2>Who is Yohannes?</h2>
-        <p>Yohannes is a group of four optimistic multi-instrumentalists who hope to use their music to make the world a better, more equal place. Named after their Ethiopian maintenance man, Yohannes was born in Boston in 2014. Band members Alex, Eli, Keenan and Zach bring their wide-ranging, conscious and subconscious influences from folk, rock, electronic, hip-hop, and jazz together to create a sound that is truly original.</p>
-      </div>
-      <div class="about_image"><img src="css/images/y2.jpg"></div>
-    </div>
-
-    <div id="page_media" class="page_element">
-      <a class="media_image" rel="gallery1" href="css/images/y1.jpg"><img src="css/images/y1.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y2.jpg"><img src="css/images/y2.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y3.jpg"><img src="css/images/y3.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y4.jpg"><img src="css/images/y4.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y5.jpg"><img src="css/images/y5.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y6.jpg"><img src="css/images/y6.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y7.jpg"><img src="css/images/y7.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y8.jpg"><img src="css/images/y8.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y9.jpg"><img src="css/images/y9.jpg"></a>
-      <a class="media_image" rel="gallery1" href="css/images/y10.jpg"><img src="css/images/y10.jpg"></a>
-    </div>
-
-    <div id="page_contact" class="page_element">
-      <h2>Booking/Inquiries</h2>
-      <a href="mailto:royaletheband@gmail.com" target="none">yohannesband@gmail.com</a>
-
-    </div>
-
-    <script>
-    $( document ).ready(function() {
-      $( "#logo" ).click(function( event ) {
-        event.preventDefault();
-        $('#main_nav li a').removeClass('active');
-        $('.page_element').hide();
-        $('#page_home').show();
-      });
-
-      $( "#about" ).click(function( event ) {
-        event.preventDefault();
-        $('#main_nav li a').removeClass('active');
-        $(this).addClass('active');
-        $('.page_element').hide();
-        $('#page_about').show();
-      });
-
-      $( "#music" ).click(function( event ) {
-        event.preventDefault();
-        $('#main_nav li a').removeClass('active');
-        $(this).addClass('active');
-        $('.page_element').hide();
-        $('#page_soundcloud').show();
-      });
-
-      $( "#media" ).click(function( event ) {
-        event.preventDefault();
-        $('#main_nav li a').removeClass('active');
-        $(this).addClass('active');
-        $('.page_element').hide();
-        $('#page_media').show();
-      });
-
-      $( "#contact" ).click(function( event ) {
-        event.preventDefault();
-        $('#main_nav li a').removeClass('active');
-        $(this).addClass('active');
-        $('.page_element').hide();
-        $('#page_contact').show();
-      });
-
-    });
-    </script>
-
-    <script>
-    $(document).ready(function() {
-      $(".media_image").fancybox({
-        openEffect  : 'none',
-        closeEffect : 'none',
-        nextEffect  : 'fade',
-        prevEffect  : 'fade',
-        padding     : 0,
-      });
-    });
-    </script>
 
   </body>
 </html>
