Use yohannes email

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="content_wrap red_block">
         <span class="anchor_offset" id="contact"></span>
         <div class="content_block">
-          <a id="contact_mail" href="mailto:royaletheband@gmail.com" target="none">yohannesband@gmail.com</a>
+          <a id="contact_mail" href="mailto:yohannesband@gmail.com" target="none">yohannesband@gmail.com</a>
           <ul class="social_icons">
             <li><a target="_blank" href="https://play.spotify.com/album/1mSwVr4DwRnVqpUBUFzvg3"><div id="spotify"></div></a></li>
             <li><a target="_blank" href="https://soundcloud.com/whoisyohannes"><div id="soundcloud"></div></a></li>
