update shows link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h1 class="band_name">Yohannes</h1>
       <a href="https://open.spotify.com/artist/7JggS3HAfUnGBQvbSyLLnI" target="_blank" class="blue">Spotify</a><br>
       <a href="https://www.facebook.com/whoisyohannes" target="_blank" class="yellow">Facebook</a><br>
-      <a href="https://www.facebook.com/whoisyohannes" target="_blank" class="red">Shows</a><br>
+      <a href="http://www.bandsintown.com/Yohannes" target="_blank" class="red">Shows</a><br>
       <a href="https://twitter.com/whoisyohannes" target="_blank" class="black">Twitter</a><br>
       <a href="https://www.instagram.com/whoisyohannes/" target="_blank" class="blue">Instagram</a><br>
       <a href="https://www.youtube.com/user/whoisyohannes" target="_blank" class="yellow">Youtube</a><br>
